force-app/main/default/objects/Hippo_Event__c/Hippo_Event__c.object-meta.xml
<CustomObject>
    <description>ww_HippoTool</description>
    <label>Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>