force-app/main/default/objects/Hippo_Event__c/fields/Addendum_G__c.field-meta.xml
<CustomField>
    <fullName>Addendum_G__c</fullName>
    <label>Addendum G</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>