force-app/main/default/objects/Hippo_Event__c/fields/Any_transfer_of_value_to_HCP__c.field-meta.xml
<CustomField>
    <fullName>Any_transfer_of_value_to_HCP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If question 8 and/or 9 above has been answered YES, will any transfer of value to HCP(s) be captured in applicable local country reporting?</description>
    <inlineHelpText>If question 11 and/or 12 above has been answered YES, will any transfer of value to HCP(s) be captured in applicable local country reporting?</inlineHelpText>
    <label>Any transfer of value to HCP OLD</label>
    <type>Checkbox</type>
</CustomField>