force-app/main/default/objects/Hippo_Event__c/fields/Any_transfer_of_value_to_HCP_Details__c.field-meta.xml
<CustomField>
    <fullName>Any_transfer_of_value_to_HCP_Details__c</fullName>
    <label>Any transfer of value to HCP Details</label>
    <type>TextArea</type>
</CustomField>