force-app/main/default/objects/Hippo_Event__c/fields/Any_transfer_of_value_to_HCP_PK__c.field-meta.xml
<CustomField>
    <fullName>Any_transfer_of_value_to_HCP_PK__c</fullName>
    <description>If question 8 and/or 9 above has been answered YES, will any transfer of value to HCP(s) be captured in applicable local country reporting?</description>
    <inlineHelpText>10. If question 8 and/or 9 above has been answered YES, will any &lt;b&gt;transfer of value&lt;/b&gt; to HCP(s) be captured in applicable local country reporting?</inlineHelpText>
    <label>Any transfer of value to HCP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_NA</valueSetName>
    </valueSet>
</CustomField>