force-app/main/default/objects/Hippo_Event__c/fields/Any_transportation_hospitality__c.field-meta.xml
<CustomField>
    <fullName>Any_transportation_hospitality__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Any transportation/hospitality?</description>
    <inlineHelpText>Any transportation/hospitality?</inlineHelpText>
    <label>Any transportation/hospitality OLD</label>
    <type>Checkbox</type>
</CustomField>