force-app/main/default/objects/Hippo_Event__c/fields/Any_transportation_hospitality_Details__c.field-meta.xml
<CustomField>
    <fullName>Any_transportation_hospitality_Details__c</fullName>
    <description>Will any transportation and/or hospitality (i.e., hotel and meals) provided to HCP(s) adhere to the limitations and maximum amount per HCP as stated in the local country Standards for Interactions with the Healthcare Community (i.e., not be lavish or luxurious, must be reasonable and proportionate)?</description>
    <inlineHelpText>Will any transportation and/or hospitality (i.e., hotel and meals) provided to HCP(s) adhere to the limitations and maximum amount per HCP as stated in the local country Standards for Interactions with the Healthcare Community?</inlineHelpText>
    <label>Any transportation hospitality Details</label>
    <type>TextArea</type>
</CustomField>