force-app/main/default/objects/Hippo_Event__c/fields/Any_transportation_hospitality_PK__c.field-meta.xml
<CustomField>
    <fullName>Any_transportation_hospitality_PK__c</fullName>
    <description>Will any transportation and/or hospitality (i.e., hotel and meals) provided to HCP(s) adhere to the limitations and maximum amount per HCP as stated in the local country &lt;b&gt;Standards for Interactions with the Healthcare Community and&lt;/b&gt;&lt;u&gt; not be lavish or luxurious, but be reasonable and proportionate&lt;/u&gt;?</description>
    <inlineHelpText>9. Will any transportation and/or hospitality provided to HCP(s) adhere to the limitations and maximum amount per HCP as stated in the local country &lt;b&gt;Standards for Interactions with the Healthcare Community&lt;/b&gt;?</inlineHelpText>
    <label>Any transportation/hospitality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_NA</valueSetName>
    </valueSet>
</CustomField>