force-app/main/default/objects/Hippo_Event__c/fields/Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process__c</fullName>
    <label>Approval Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Approval_Process</valueSetName>
    </valueSet>
</CustomField>