force-app/main/default/objects/Hippo_Event__c/fields/Approved_Interactions__c.field-meta.xml
<CustomField>
    <fullName>Approved_Interactions__c</fullName>
    <label>Approved Interactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>