force-app/main/default/objects/Hippo_Event__c/fields/Approved_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rejected_Date__c</fullName>
    <description>For Email Notification</description>
    <formula>Approved_Rejected_Date_Cus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved/Rejected Date</label>
    <type>Date</type>
</CustomField>