force-app/main/default/objects/Hippo_Event__c/fields/Approved_Rejected_Date_Cus__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rejected_Date_Cus__c</fullName>
    <label>Approved/Rejected Date</label>
    <type>Date</type>
</CustomField>