force-app/main/default/objects/Hippo_Event__c/fields/Approver_Step__c.field-meta.xml
<CustomField>
    <fullName>Approver_Step__c</fullName>
    <formula>CASE(TEXT(Event_Approver__r.Type__c),
&apos;FLM Approver&apos;,$Label.hippoFLMApprover,
&apos;Department Head Approver&apos;,$Label.hippoDepartmentHeadApprover, 
&apos;RSS Approver&apos;,$Label.hippoRSSApprover, 
&apos;Medical Approver&apos;,$Label.hippoMedicalApprover, 
&apos;Compliance Approver&apos;,$Label.hippoComplianceApprover,
&apos;Global Compliance Approver&apos;,$Label.hippoGlobalComplianceApprover,
&apos;Regional Compliance Approver&apos;,$Label.hippoRegionalComplianceApprover,
&apos;European Compliance Approver&apos;,$Label.hippoEuropeanComplianceApprover, 
TEXT(Event_Approver__r.Type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approver Step</label>
    <type>Text</type>
</CustomField>