force-app/main/default/objects/Hippo_Event__c/fields/Approvers_Info__c.field-meta.xml
<CustomField>
    <fullName>Approvers_Info__c</fullName>
    <label>Approvers Info</label>
    <length>18000</length>
    <type>LongTextArea</type>
</CustomField>