force-app/main/default/objects/Hippo_Event__c/fields/Ask_Password_For_Send_To_Appr__c.field-meta.xml
<CustomField>
    <fullName>Ask_Password_For_Send_To_Appr__c</fullName>
    <formula>IF( AND(ISBLANK(TEXT(Any_transfer_of_value_to_HCP_PK__c)),
        ISBLANK(TEXT(Any_transportation_hospitality_PK__c)),
        ISBLANK(TEXT(Is_Global_Policy_on_Engaging_PK__c)),
        ISBLANK(TEXT(Is_Local_Regulatory_Authority_PK__c)),
        ISBLANK(TEXT(Is_the_proposed_event_types_PK__c))
) , false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ask Password For Send To Appr</label>
    <type>Checkbox</type>
</CustomField>