force-app/main/default/objects/Hippo_Event__c/fields/Beneficiary_Address__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Address__c</fullName>
    <description>Sponsored Organization (“Beneficiary”) Address</description>
    <inlineHelpText>Sponsored Organization (“Beneficiary”) Address</inlineHelpText>
    <label>Beneficiary Address</label>
    <type>TextArea</type>
</CustomField>