force-app/main/default/objects/Hippo_Event__c/fields/Beneficiary_Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Legal_Entity_Name__c</fullName>
    <description>Sponsored Organization (“Beneficiary”) Name</description>
    <inlineHelpText>Sponsored Organization (“Beneficiary”) Name</inlineHelpText>
    <label>Beneficiary Legal Entity Name</label>
    <type>TextArea</type>
</CustomField>