force-app/main/default/objects/Hippo_Event__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit</label>
    <referenceTo>Hippo_Business_Unit__c</referenceTo>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>