force-app/main/default/objects/Hippo_Event__c/fields/Business_Unit_Sync__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Sync__c</fullName>
    <label>Business Unit Sync</label>
    <length>255</length>
    <type>Text</type>
</CustomField>