force-app/main/default/objects/Hippo_Event__c/fields/Cancel_Approval_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Approval_Reason__c</fullName>
    <label>Cancel/Terminate Reason</label>
    <type>TextArea</type>
</CustomField>