force-app/main/default/objects/Hippo_Event__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face to face</fullName>
                <label>Live</label>
            </value>
            <value>
                <fullName>Webinar</fullName>
                <label>Online</label>
            </value>
            <value>
                <fullName>Live and Online</fullName>
                <label>Live + Online</label>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>