force-app/main/default/objects/Hippo_Event__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>Event City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>