force-app/main/default/objects/Hippo_Event__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <formula>IF( VIA_HIP_TotalTopicComments__c &gt; 0, IF( VIA_HIP_UnansweredTopicComments__c=0,$Label.hippoAllAnswered,TEXT(VIA_HIP_UnansweredTopicComments__c)+ &apos; &apos; + $Label.hippoUnanswered), $Label.hipponoComments)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comments</label>
    <type>Text</type>
</CustomField>