force-app/main/default/objects/Hippo_Event__c/fields/Conference_Congress_Departments__c.field-meta.xml
<CustomField>
    <fullName>Conference_Congress_Departments__c</fullName>
    <description>If the event is  a congress or conference, will a symposium be conducted? If so, which departments  will participate ?  
Please note that the Sales department &lt;u&gt;should not&lt;/u&gt; participate in any symposium and should remain stationed at the desigated area for promotional activities (e.g., at the booth)</description>
    <inlineHelpText>If the event is a congress/conference, will a symposium be conducted? If so, which departments will participate?</inlineHelpText>
    <label>Conference/Congress Departments</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>