force-app/main/default/objects/Hippo_Event__c/fields/Content_in_Therapeutic_Areas_Details__c.field-meta.xml
<CustomField>
    <fullName>Content_in_Therapeutic_Areas_Details__c</fullName>
    <description>If yes, what product/therapeutic area will be discussed? Describe below</description>
    <inlineHelpText>If yes, what product/therapeutic area will be discussed? Describe below</inlineHelpText>
    <label>Content in Therapeutic Areas Details</label>
    <type>TextArea</type>
</CustomField>