force-app/main/default/objects/Hippo_Event__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Country</label>
    <referenceTo>Hippo_Country__c</referenceTo>
    <relationshipName>Hippo_Events</relationshipName>
    <type>Lookup</type>
</CustomField>