force-app/main/default/objects/Hippo_Event__c/fields/Country_name__c.field-meta.xml
<CustomField>
    <fullName>Country_name__c</fullName>
    <formula>Country__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country name</label>
    <type>Text</type>
</CustomField>