force-app/main/default/objects/Hippo_Event__c/fields/Country_Sync__c.field-meta.xml
<CustomField>
    <fullName>Country_Sync__c</fullName>
    <label>Country Sync</label>
    <length>100</length>
    <type>Text</type>
</CustomField>