force-app/main/default/objects/Hippo_Event__c/fields/CountryT__c.field-meta.xml
<CustomField>
    <fullName>CountryT__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>