force-app/main/default/objects/Hippo_Event__c/fields/countSyncTries__c.field-meta.xml
<CustomField>
    <fullName>countSyncTries__c</fullName>
    <label>countSyncTries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>