force-app/main/default/objects/Hippo_Event__c/fields/Currency_Rate__c.field-meta.xml
<CustomField>
    <fullName>Currency_Rate__c</fullName>
    <label>Currency Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>