force-app/main/default/objects/Hippo_Event__c/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <formula>Start_Event_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval needed at date (RO)</label>
    <type>Date</type>
</CustomField>