force-app/main/default/objects/Hippo_Event__c/fields/DeadlineCus__c.field-meta.xml
<CustomField>
    <fullName>DeadlineCus__c</fullName>
    <label>Approval needed at date</label>
    <type>Date</type>
</CustomField>