force-app/main/default/objects/Hippo_Event__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Event Description</label>
    <type>TextArea</type>
</CustomField>