force-app/main/default/objects/Hippo_Event__c/fields/Educational_description__c.field-meta.xml
<CustomField>
    <fullName>Educational_description__c</fullName>
    <label>Educational description</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>