force-app/main/default/objects/Hippo_Event__c/fields/Educational_Support_HCP_Type__c.field-meta.xml
<CustomField>
    <fullName>Educational_Support_HCP_Type__c</fullName>
    <description>Specialty type of HCP to be provided with Educational Support.</description>
    <inlineHelpText>Specialty type of HCP to be provided with Educational Support.</inlineHelpText>
    <label>Educational Support HCP Type</label>
    <type>TextArea</type>
</CustomField>