force-app/main/default/objects/Hippo_Event__c/fields/Educational_Support_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Educational_Support_Rationale__c</fullName>
    <description>Rationale for providing HCP Educational Support (if the event will occur outside of the HCP&apos;s country of practice, include justification).</description>
    <inlineHelpText>Rationale for providing HCP Educational Support (if the event will occur outside of the HCP&apos;s country of practice, include justification).</inlineHelpText>
    <label>Educational Support Rationale</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>