force-app/main/default/objects/Hippo_Event__c/fields/End_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Event_Date__c</fullName>
    <label>End Event Date</label>
    <type>Date</type>
</CustomField>