force-app/main/default/objects/Hippo_Event__c/fields/Event_Agenda__c.field-meta.xml
<CustomField>
    <fullName>Event_Agenda__c</fullName>
    <description>Event agenda and planned topics of discussion</description>
    <inlineHelpText>Event agenda and planned topics of discussion</inlineHelpText>
    <label>Event Agenda</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>