force-app/main/default/objects/Hippo_Event__c/fields/Event_Approver__c.field-meta.xml
<CustomField>
    <fullName>Event_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Approver</label>
    <referenceTo>Hippo_Event_Approver__c</referenceTo>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>