force-app/main/default/objects/Hippo_Event__c/fields/Event_Approver_User__c.field-meta.xml
<CustomField>
    <fullName>Event_Approver_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Approver User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>