force-app/main/default/objects/Hippo_Event__c/fields/Event_Educational_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Event_Educational_Purpose__c</fullName>
    <description>Describe the scientific and/or educational purpose of the event</description>
    <inlineHelpText>Describe the scientific and/or educational purpose of the event</inlineHelpText>
    <label>Event Educational Purpose</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>