force-app/main/default/objects/Hippo_Event__c/fields/Event_Ext__c.field-meta.xml
<CustomField>
    <fullName>Event_Ext__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Ext</label>
    <referenceTo>Hippo_Event_Ext__c</referenceTo>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>