force-app/main/default/objects/Hippo_Event__c/fields/Event_ID_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_ID_Code__c</fullName>
    <formula>UPPER(Parent_User_Setting__r.Country__r.Country_Code__c)+ &apos;_E&apos; + IF(LEN(TEXT(Unique_Index__c)) &gt; 5, TEXT(Unique_Index__c), LPAD(TEXT(Unique_Index__c), 5, &apos;0&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event ID Code</label>
    <type>Text</type>
</CustomField>