force-app/main/default/objects/Hippo_Event__c/fields/Event_ID_Ext__c.field-meta.xml
<CustomField>
    <fullName>Event_ID_Ext__c</fullName>
    <externalId>true</externalId>
    <label>Event ID Ext</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>