force-app/main/default/objects/Hippo_Event__c/fields/Event_is_international__c.field-meta.xml
<CustomField>
    <fullName>Event_is_international__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event is international</label>
    <type>Checkbox</type>
</CustomField>