force-app/main/default/objects/Hippo_Event__c/fields/Event_Location__c.field-meta.xml
<CustomField>
    <fullName>Event_Location__c</fullName>
    <formula>IF(ISPICKVAL( Channel__c , &apos;N/A&apos;), &apos;N/A&apos;, 
IF(City__c = null, &quot;Online&quot;,
IF(City__c != null ,City__c, null)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Location</label>
    <type>Text</type>
</CustomField>