force-app/main/default/objects/Hippo_Event__c/fields/Event_number__c.field-meta.xml
<CustomField>
    <fullName>Event_number__c</fullName>
    <label>Event number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>