force-app/main/default/objects/Hippo_Event__c/fields/Event_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Event_Purpose__c</fullName>
    <label>Event Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Educational</fullName>
            </value>
            <value>
                <fullName>Scientific</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>