force-app/main/default/objects/Hippo_Event__c/fields/Event_Sponsorship_Benefit_Description__c.field-meta.xml
<CustomField>
    <fullName>Event_Sponsorship_Benefit_Description__c</fullName>
    <description>Description of benefit to Viatris for Event Sponsorship.
(e.g.,  booth or exhibit space, distribution of promotional materials, Company branding, etc.)</description>
    <inlineHelpText>Description of benefit to Viatris for Event Sponsorship.
(e.g.,  booth or exhibit space, distribution of promotional materials, Company branding, etc.)</inlineHelpText>
    <label>Event Sponsorship Benefit Description</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>