force-app/main/default/objects/Hippo_Event__c/fields/Event_subtype__c.field-meta.xml
<CustomField>
    <fullName>Event_subtype__c</fullName>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repetitive RP lunch / dinner with snack</fullName>
            </value>
            <value>
                <fullName>Repetitive RP lunch / dinner without snack</fullName>
            </value>
            <value>
                <fullName>Classic RP lunch / dinner with snack</fullName>
            </value>
            <value>
                <fullName>Classic RP lunch / dinner without snack</fullName>
            </value>
            <value>
                <fullName>Classic staff lunch</fullName>
            </value>
            <value>
                <fullName>Classic staff breakfast / snack</fullName>
            </value>
            <value>
                <fullName>Repetitive staff lunch</fullName>
            </value>
            <value>
                <fullName>Repetitive staff breakfast / snack</fullName>
            </value>
            <value>
                <fullName>NA / Other</fullName>
            </value>
            <value>
                <fullName>RP Classic / RP Conference</fullName>
                <isActive>false</isActive>
                <label>RP Classic / RP Conference</label>
            </value>
            <value>
                <fullName>RP Repetitive</fullName>
                <isActive>false</isActive>
                <label>RP Repetitive</label>
            </value>
            <value>
                <fullName>Staff Classic</fullName>
                <isActive>false</isActive>
                <label>Staff Classic</label>
            </value>
            <value>
                <fullName>Staff Repetitive</fullName>
                <isActive>false</isActive>
                <label>Staff Repetitive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>