force-app/main/default/objects/Hippo_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <formula>CASE( Type__c,&quot;3rd Party Event Registration&quot;,$Label.hippoTrdPartyEventRegistration,&quot;Commercial Advisory Board&quot;,$Label.hippoCommercialAdvisoryBoard,&quot;Conference&quot;,$Label.hippoConference,&quot;Congress&quot;,$Label.hippoCongress,&quot;Master Class&quot;,$Label.hippoMasterClass,&quot;Meeting&quot;,$Label.hippoMeeting,&quot;Roundtable&quot;,$Label.hippoRoundtable,&quot;Site Visit&quot;,$Label.hippoSiteVisit,&quot;Symposium&quot;,$Label.hippoSymposium,&quot;CME (Continuing Medical Education)&quot;,$Label.hippoContinuingMedicalEducation,&quot;Local Speaker Programs&quot;,$Label.hippoLocalSpeakerPrograms, &quot;Medical Advisory Board&quot;, $Label.hippoMedicalAdvisoryBoard, &quot;Medical-2-Medical Educational Event&quot;, $Label.hippoMedical2MedicalEducationalEvent, $Label.hippoOther )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Type</label>
    <type>Text</type>
</CustomField>