force-app/main/default/objects/Hippo_Event__c/fields/Event_Type_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Event_Type_Concerns__c</fullName>
    <description>The request concerns what type of event or activity:  Conference/Congress, Meeting (specify Masterclass, Roundtable, Symposium or Site Visit), or project? Indicate in box provided.</description>
    <inlineHelpText>The request concerns what type of event or activity:  Conference/Congress, Meeting (specify Masterclass, Roundtable, Symposium or Site Visit), or project? Indicate in box provided.</inlineHelpText>
    <label>Event Type Concerns</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Master Class</fullName>
            </value>
            <value>
                <fullName>Roundtable</fullName>
            </value>
            <value>
                <fullName>Symposium</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Commercial Advisory Board</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Congress</fullName>
            </value>
            <value>
                <fullName>CME (Continuing Medical Education)</fullName>
            </value>
            <value>
                <fullName>Local Speaker Programs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>