force-app/main/default/objects/Hippo_Event__c/fields/Event_venue__c.field-meta.xml
<CustomField>
    <fullName>Event_venue__c</fullName>
    <inlineHelpText>Event venue</inlineHelpText>
    <label>Event venue</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>