force-app/main/default/objects/Hippo_Event__c/fields/Faculty_Members_Details__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Members_Details__c</fullName>
    <description>Name and a description of the credentials of each faculty member.</description>
    <inlineHelpText>Name and a description of the credentials of each faculty member.</inlineHelpText>
    <label>Faculty Members Details</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>