force-app/main/default/objects/Hippo_Event__c/fields/Financial_Amounts_in_USD__c.field-meta.xml
<CustomField>
    <fullName>Financial_Amounts_in_USD__c</fullName>
    <formula>IF(
OR(ISBLANK(Currency_Rate__c), Currency_Rate__c = 0),
0,
Sum_of_Financial_Amounts__c / Currency_Rate__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Amounts in USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>