force-app/main/default/objects/Hippo_Event__c/fields/Financial_Threshold_Limit__c.field-meta.xml
<CustomField>
    <fullName>Financial_Threshold_Limit__c</fullName>
    <inlineHelpText>Limit defined in USD</inlineHelpText>
    <label>Financial Threshold Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>