force-app/main/default/objects/Hippo_Event__c/fields/Form_Steps__c.field-meta.xml
<CustomField>
    <fullName>Form_Steps__c</fullName>
    <label>Form Steps</label>
    <type>TextArea</type>
</CustomField>