force-app/main/default/objects/Hippo_Event__c/fields/from_GKB__c.field-meta.xml
<CustomField>
    <fullName>from_GKB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From a Global Function?</label>
    <type>Checkbox</type>
</CustomField>