force-app/main/default/objects/Hippo_Event__c/fields/HCP_City__c.field-meta.xml
<CustomField>
    <fullName>HCP_City__c</fullName>
    <formula>City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>