force-app/main/default/objects/Hippo_Event__c/fields/HCP_Country__c.field-meta.xml
<CustomField>
    <fullName>HCP_Country__c</fullName>
    <formula>Country__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Country</label>
    <type>Text</type>
</CustomField>