force-app/main/default/objects/Hippo_Event__c/fields/HCP_Country_Sync__c.field-meta.xml
<CustomField>
    <fullName>HCP_Country_Sync__c</fullName>
    <label>HCP Country Sync</label>
    <length>255</length>
    <type>Text</type>
</CustomField>