force-app/main/default/objects/Hippo_Event__c/fields/HCP_Name__c.field-meta.xml
<CustomField>
    <fullName>HCP_Name__c</fullName>
    <formula>HCP_Name_Sync__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HCP Name</label>
    <type>Text</type>
</CustomField>