force-app/main/default/objects/Hippo_Event__c/fields/HCP_Practicing_Details__c.field-meta.xml
<CustomField>
    <fullName>HCP_Practicing_Details__c</fullName>
    <formula>HCP_Practicing_Details_Sync__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HCP Practicing Details</label>
    <type>Text</type>
</CustomField>