force-app/main/default/objects/Hippo_Event__c/fields/HCP_Practicing_Details_Sync__c.field-meta.xml
<CustomField>
    <fullName>HCP_Practicing_Details_Sync__c</fullName>
    <label>HCP Practicing Details Sync</label>
    <length>255</length>
    <type>Text</type>
</CustomField>