force-app/main/default/objects/Hippo_Event__c/fields/HCP_User__c.field-meta.xml
<CustomField>
    <fullName>HCP_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HCP</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>