force-app/main/default/objects/Hippo_Event__c/fields/HCP_User_Sync__c.field-meta.xml
<CustomField>
    <fullName>HCP_User_Sync__c</fullName>
    <label>HCP User Sync</label>
    <length>18</length>
    <type>Text</type>
</CustomField>