force-app/main/default/objects/Hippo_Event__c/fields/Interactions__c.field-meta.xml
<CustomField>
    <fullName>Interactions__c</fullName>
    <formula>TEXT(Approved_Interactions__c) + &apos; / &apos; + TEXT(Number_Of_Interactions__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interactions</label>
    <type>Text</type>
</CustomField>