force-app/main/default/objects/Hippo_Event__c/fields/Is_an_advisory_board__c.field-meta.xml
<CustomField>
    <fullName>Is_an_advisory_board__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the Company-organized Event an advisory board?</description>
    <inlineHelpText>Is the Company-organized Event an advisory board?</inlineHelpText>
    <label>Is an advisory board</label>
    <type>Checkbox</type>
</CustomField>