force-app/main/default/objects/Hippo_Event__c/fields/Is_an_advisory_board_details__c.field-meta.xml
<CustomField>
    <fullName>Is_an_advisory_board_details__c</fullName>
    <description>If the Company-organized Event is an advisory board, provide a brief description of the unmet business need and purpose or goal of the advisory board.</description>
    <inlineHelpText>If the Company-organized Event is an advisory board, provide a brief description of the unmet business need and purpose or goal of the advisory board.</inlineHelpText>
    <label>Is an advisory board details</label>
    <type>TextArea</type>
</CustomField>