force-app/main/default/objects/Hippo_Event__c/fields/Is_Anti_Corruption_Policy__c.field-meta.xml
<CustomField>
    <fullName>Is_Anti_Corruption_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Overall, does the proposed event comply with all applicable laws, rules, regulations, and Company policies including the Anti-Corruption Policy and local Standards for Interactions with the Healthcare Community?</description>
    <inlineHelpText>11. Overall, does the proposed event comply with all applicable laws, rules, regulations, and Company policies including the &lt;b&gt;Anti-Corruption Policy&lt;/b&gt; and local &lt;b&gt;Standards for Interactions with the Healthcare Community&lt;/b&gt;?</inlineHelpText>
    <label>Is Anti-Corruption Policy</label>
    <type>Checkbox</type>
</CustomField>